# kenal-io

./: Makefile  README.md  pyproject.toml
examples/: 01_blocks_basic.py  02_rules_compile.py  03_plates_fanout.py  04_roads_pipeline.py  05_frame_orchestration.py  06_config_driven.py  07_cli_info.py  08_llm_block.py  09_llm_frame_road.py  10_engine_generate.py  11_llm_comprehensive_suite.py  llm_support.py
examples/config/: pipeline.json
scripts/: console.py  run_examples.py  run_examples.sh  run_tests.py  run_tests.sh
src/kenal/: __init__.py  block.py  cli.py  engine.py  exceptions.py  frame.py  plate.py  road.py  rules.py  types.py
tests/: conftest.py  test_block.py  test_block_llm.py  test_cli.py  test_engine.py  test_frame.py  test_llm_integration.py  test_plate.py  test_road.py  test_rules.py  test_types.py
