[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kenal-io"
dynamic = ["version"]
description = "A simple agent framework with Plates, Roads, Blocks, and Frames."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "Aditya Patange (Adi 59)"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "ollama",
    "python-dotenv",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.2",
]

[project.scripts]
kenal = "kenal.cli:main"

[project.urls]
Homepage = "https://github.com/AdiPatange/kenal-io"
Repository = "https://github.com/AdiPatange/kenal-io"

[tool.hatch.version]
path = "src/kenal/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/kenal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["kenal"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
